# trendline

./: CMakeLists.txt  LICENSE  README.md  install.sh
apps/: CMakeLists.txt
examples/: CMakeLists.txt  daxpy.c  dgemm-marker.c  dgemm.c  dgemv.c  saxpy.c  sgemm.c  sgemv.c
include/: CMakeLists.txt
include/trendline/: CMakeLists.txt  trendline.h  trendline_errno.h  trendline_marker.h
src/: CAPI.cpp  CMakeLists.txt  Command.cpp  Command.h  CommandAggregate.cpp  CommandAggregate.h  CommandCorrel.cpp  CommandCorrel.h  CommandHelp.cpp  CommandHelp.h  CommandList.cpp  CommandList.h  CommandRecord.cpp  CommandRecord.h  CommandStat.cpp  CommandStat.h  Config.h.in  Data.cpp  Data.h  Debug.h  Main.cpp  PMU.cpp  PMU.h  PMUICX.cpp  PMUICX.h  PMUNeoverseN1.cpp  PMUNeoverseN1.h  PMUNeoverseV1.cpp  PMUNeoverseV1.h  Platform.cpp  Platform.h  Printer.cpp  Printer.h  Sampler.cpp  Sampler.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  Type.h
tests/: CMakeLists.txt
tests/01_pmu/: CMakeLists.txt  test01_pmu.cpp
